# bob-the-pirate

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pygbag.ini  pyproject.toml
.github/workflows/: deploy-web.yml
docs/plans/: 2026-02-23-bob-the-pirate-game-plan.md  2026-04-05-skin-stats-reference.md  2026-04-05-skins-system-design.md
game/: __init__.py  animation.py  audio.py  camera.py  collectible_sprites.py  collectibles.py  enemies.py  game.py  level.py  player.py  player_projectiles.py  powerups.py  screens.py  settings.py  skins.py  tiles.py  ui.py
levels/: boss_arena.json  level1.json  level2.json  level3.json  level4.json  level5.json  secret_crypt.json
scripts/: build_web.sh  create_ability_sprites.py  extend_levels.py  show_ghost_captain.py
tests/: __init__.py  test_abilities.py  test_animation.py  test_audio.py  test_collectibles.py  test_enemies.py  test_game.py  test_levels.py  test_new_powerups.py  test_player.py  test_powerups.py  test_screens.py  test_skins.py  test_tiles.py
tools/: generate_backgrounds.py  generate_bone_sprite.py  generate_boss_sprites.py  generate_collectible_sprites.py  generate_enemy_sprites.py  generate_ghost_captain_sprites.py  generate_music.py  generate_parrot_sprites.py  generate_player_sprites.py  generate_sounds.py  generate_tile_sprites.py
