[project]
name = "bob-the-pirate"
version = "0.1.0"
description = "A Megaman-style platformer where Captain Bob the Pirate battles British naval forces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
bob-the-pirate = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]
