[project]
name = "bob-the-pirate"
version = "0.1.0"
description = "A Megaman-style platformer where Captain Bob the Pirate battles British naval forces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
bob-the-pirate = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportArgumentType = false
reportReturnType = false
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter
